--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,3 +15,9 @@ sphinx:
 python:
   install:
   - requirements: docs/requirements.txt
+  
+#Optionally build your docs in additional formats such as PDF and ePub
+formats:
+   - pdf
+   - epub
+
